objects/GEMS_Test_Reverse_Eligibility_Feed__c.object
<CustomObject>
    <fields>
        <fullName>Act_Send_Date__c</fullName>
        <label>Act Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_Rec__c</fullName>
        <label>Feedback Rec</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GET_Case__c</fullName>
        <label>GET Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Test Reverse Eligibility Feeds</relationshipLabel>
        <relationshipName>GEMS_Test_Reverse_Eligibility_Feeds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Ready__c</fullName>
        <label>Production Ready</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Send_Date__c</fullName>
        <label>Target Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Number__c</fullName>
        <label>Test File Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GEMS Test Reverse Eligibility Feed</label>
    <nameField>
        <displayFormat>RE-{0000}</displayFormat>
        <label>Test Reverse Eligibility Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GEMS Test Reverse Eligibility Feeds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>